--- a/landoui/templates/treestatus/recent_changes.html
+++ b/landoui/templates/treestatus/recent_changes.html
@@ -23,6 +23,7 @@
             {% for status_change_form, status_change_data in recent_changes_stack %}
             <tr>
                 <form class="recent-changes-form" action="{{ url_for("treestatus.update_change", id=status_change_data.id) }}" method="post">
+                    {{ status_change_form.csrf_token }}
                     <td>
                         <ul>
                             {% for tree in status_change_data.trees %}
